@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-07-06T08:22:46Z",
+  "timestamp" : "2022-07-06T16:30:42Z",
   "count_outdated" : 2211,
   "uniques_outdated" : 466,
-  "count" : 2257,
+  "count" : 2258,
   "uniques" : 494,
   "clones" : [
     {
@@ -98,8 +98,8 @@
     },
     {
       "timestamp": "2022-07-06T00:00:00Z",
-      "count": 7,
-      "count_minmax": [ 7, 7 ],
+      "count": 8,
+      "count_minmax": [ 7, 8 ],
       "uniques": 5,
       "uniques_minmax": [ 5, 5 ]
     }
