@@ -1,5 +1,5 @@
 {
-  "count": 46,
+  "count": 47,
   "uniques": 14,
   "clones": [
     {
@@ -69,7 +69,7 @@
     },
     {
       "timestamp": "2022-07-06T00:00:00Z",
-      "count": 7,
+      "count": 8,
       "uniques": 5
     }
   ]
