@@ -1,3 +1,10 @@
+2022-07-06T16:30:42Z:
+* notice: last 14d: unq all: 14 47
+* notice: prev accum: outdated-unq outdated-all / unq all: 466 2211 / 494 2257
+* notice: next accum: outdated-unq outdated-all / unq all: 466 2211 / 494 2258
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +5 +8 -0 -0 / 5 8
+* notice: removed / changed dates: [] / [2022-07-06]
+
 2022-07-06T08:22:46Z:
 * notice: last 14d: unq all: 14 46
 * notice: prev accum: outdated-unq outdated-all / unq all: 466 2211 / 489 2250
